<resources>
    <string name="app_name">UNIAffitto</string>
    <string name="nome">Nome</string>
    <string name="annulla">Annulla</string>
    <string name="conferma">Conferma</string>
    <string name="indietro">Indietro</string>
    <string name="logout" translatable="false">LOGOUT</string>
    <string name="login" translatable="false">LOGIN</string>
    <string name="precedente">Precedente</string>
    <string name="successivo">Successivo</string>
    <string name="ciao">CIAO! Benvenuto in UNIAffitto</string>
    <string name="registrati">REGISTRATI</string>
    <string name="ricordami">Ricordami</string>
    <string name="oppure">Oppure puoi registrarti</string>
    <string name="password" translatable="false">Password</string>
    <string name="passwordDIM">Password Dimenticata</string>
    <string name="profiloStud">Profilo Studente</string>
    <string name="cognome">Cognome</string>
    <string name="universita">Univeristà</string>
    <string name="indirizzoLaurea">Indirizzo Laurea</string>
    <string name="tipoLaurea">Tipologia Laurea</string>
    <string name="descrizione">Descrizione</string>
    <string name="telefono">Telefono</string>
    <string name="email" translatable="false">  E-mail</string>
    <string name="profilo">profilo</string>
    <string name="messaggi">Messaggi</string>
    <string name="caseProprietario">Case Proprietario</string>
    <string name="recensioniProprietario">Recensioni Proprietario</string>
    <string name="informazioniPersonali">Informazioni personali</string>
    <string name="Bottone1">Recensioni </string>
    <string name="modificaProfilo">Modifica Profilo</string>
    <string name="tuePrenotazioni">LE TUE PRENOTAZIONI</string>
    <string name="Etichetta7">Recensioni</string>
    <string name="cercaAnnunci">Cerca gli annunci a Torino</string>
    <string name="Bottone3">INFORMAZIONI PERSONALI </string>
    <string name="Bottone4">GESTIONE DELLE NOTIFICHE </string>
    <string name="Bottone5">PUBBLICA NUOVO ANNUNCIO </string>
    <string name="Bottone6">PROPONI ESPERIENZA </string>
    <string name="Bottone7">CENTRO ASSISTENZA</string>
    <string name="etichetta9">Impostazioni Account</string>
    <string name="etichetta10">Gestione Alloggio</string>
    <string name="etichetta11">Assistenza</string>
    <string name="etichetta13">Opzione visita virtuale</string>
    <string name="prezzo">Prezzo</string>
    <string name="selezionaPrezzo">Seleziona prezzo</string>
    <string name="euro">€</string>
    <string name="inserisciValutazione">Inserisci valutazione</string>
    <string name="selTipologiaAlloggio">Seleziona tipologia alloggio</string>
    <string name="zone">Zone</string>
    <string name="tipologia">Tipologia</string>
    <string name="etichettaPaypal">Per la tua prenotazione il proprietario richiede il pagamento di un ticket, che ti verrà rimborsato una volta avvenuta la visita</string>
    <string name="etichettaImportoPaypal">Il proprietario richiede un importo di 5 euro per la prenotazione di questa visita</string>
    <string name="facebook_app_id" translatable="false">513976396407275</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb513976396407275</string>
    <string name="channel_name" translatable="false">APPartamento_channel</string>
    <string name="channel_description">Descrizione canale</string>
    <string name="assistenza1">Centro Assistenza APPartamento non esistare a contattarci per qualsiasi problema</string>
    <string name="assistenza2">Per eventuali problemi puoi contattarci al nostro indirizzo e-mail :  Appartamento@gmail.com </string>
    <string name="case1">Le tue case</string>
    <string name="aggiungiCasa">Aggiungi nuova casa</string>
    <string name="Prenotazioni1">Prenotazioni</string>
    <string name="InteroApp">Intero appartamento</string>
    <string name="singola">Stanza singola</string>
    <string name="doppia">Stanza doppia</string>
    <string name="pLetto">Posto letto</string>
    <string name="valCasa">Rating casa</string>
    <string name="cambiaImmagine">Cambia Immagine</string>
    <string name="laMiaCasa">La mia casa</string>
    <string name="home" translatable="false">Home</string>
    <string name="nomeBolletta">Inserire nome bolletta</string>
    <string name="aggiungiBolletta">Aggiungi bolletta alla lista</string>
    <string name="inserisciImmagine">Aggiungi immagine da galleria</string>
    <string name="visulizzaBollette">Visualizza bollette presenti</string>
    <string name="inserisciNomeannuncio">Inserisci il nome dell\'annuncio</string>
    <string name="selezionaTipologia">Seleziona la tipologia</string>
    <string name="valoreprezzo" translatable="false">300</string>
    <string name="spese">Inserisci eventuali spese straordinarie che posso riguardare l\'appartamento (conguaglio, caparre extra...)</string>
    <string name="nomeCasa">Scegli il nome della tua casa</string>
    <string name="posizione">Posizione</string>
    <string name="indirizzo">Via/Strada/P.zz, numero civico, CAP</string>
    <string name="caratteristiche">Caratteristiche principali (numero)</string>
    <string name="numBagni">N° Bagni</string>
    <string name="numero" translatable="false">1</string>
    <string name="numStanze">N° Stanze</string>
    <string name="numOspiti">N° Ospiti</string>
    <string name="primaEsperienza">Prima Esperienza</string>
    <string name="triennale">Triennale</string>
    <string name="magistrale">Magistrale</string>
    <string name="valutazione">Valutazione</string>
    <string name="link" translatable="false">LINK</string>
    <string name="scegliAnnunci">Scegli i migliori annunci</string>
    <string name="mappa">Visualizza mappa</string>
    <string-array name="hobby">
        <item>Giochi da tavolo</item>
        <item>Scacchi</item>
        <item>Cucina</item>
        <item>Musei</item>
        <item>Sport</item>
        <item>Calcio</item>
        <item>Fitness</item>
        <item>Musica</item>
        <item>Feste</item>
        <item>Libri</item>
        <item>Videogiochi</item>
    </string-array>
    <string-array name="servizi">
        <item>Aria Condizionata</item>
        <item>Balcone</item>
        <item>Cucina</item>
        <item>Forno</item>
        <item>Frigorifero e Freezer</item>
        <item>Lavastoviglie</item>
        <item>Lavatrice</item>
        <item>Piatti e Posate</item>
        <item>Posto Auto</item>
        <item>Riscaldamento</item>
        <item>Sky</item>
        <item>Televisone</item>
        <item>Terrazzina o Veranda</item>
        <item>Ventilatori portatili</item>
        <item>Wi-fi</item>
    </string-array>
    <string-array name="ProblemiAssistenza">
        <item>Aggiungere Inquilino Presente</item>
        <item>Servizi App non funzionanti</item>
        <item>Altro</item>
    </string-array>
    <string-array name="tipologiaPostiLetto">
        <item>Intero appartamento</item>
        <item>Stanza singola</item>
        <item>Stanza doppia</item>
        <item>Posto letto</item>
    </string-array>
    <string-array name="tipoPrenotazione">
        <item>In Sospeso</item>
        <item>Confermate</item>
        <item>Terminate</item>
    </string-array>
    <string-array name="fasceOrarie">
        <item>8:00-10:00</item>
        <item>10:00-12:00</item>
        <item>12:00-14:00</item>
        <item>14:00-16:00</item>
        <item>16:00-18:00</item>
        <item>18:00-20:00</item>
    </string-array>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_messaggi">MessaggiActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="alarm_notif_title" translatable="false">UNIAffitto</string>
    <string name="alarm_notif_text">Nuova notifica</string>
    <string name="etichetta2">nome</string>
    <string-array name="politoTriennale">
        <item>Architettura</item>
        <item>Architecture</item>
        <item>Design e Comunicazione</item>
        <item>Design sostenibile per il sistema alimentare</item>
        <item>Electronic and communications engineering</item>
        <item>Ingegneria Aereospaziale</item>
        <item>Ingegneria Biomedica</item>
        <item>Ingegneria Chimica e alimentare</item>
        <item>Ingegneria Civile</item>
        <item>Ingegneria dei Materiali</item>
        <item>Ingegneria del Cinema e dei mezzi di comunicazione</item>
        <item>Ingegneria dell autoveicolo</item>
        <item>Automotive engineering</item>
        <item>Ingegneria della produzione industriale</item>
        <item>Ingegneria Edile</item>
        <item>Ingegneria Elettronica</item>
        <item>Ingegneria Elettrica</item>
        <item>Ingegneria Energetica</item>
        <item>Ingegneria Fisica</item>
        <item>Ingegneria Gestionale L-8</item>
        <item>Ingegneria Gestionale L-9</item>
        <item>Ingegneria Informatica</item>
        <item>Computer Engineering</item>
        <item>Ingegneria Meccanica</item>
        <item>Mechanica Engineering</item>
        <item>Ingegneria per l ambiente e il territorio</item>
        <item>Matematica per l ingegneria</item>
        <item>Pianificazione territoriale, urbanistica e paesaggistico-ambientale</item>
        <item>Tecnologie per l industria manifatturiera</item>
    </string-array>
    <string-array name="politoMagistrale">
        <item>Architettura Costruzione Citta</item>
        <item>Architecture Construction City</item>
        <item>Architettura per il patrimonio</item>
        <item>Architecture for heritage</item>
        <item>Architettura per la sostenibilità</item>
        <item>Architecture for sustainability</item>
        <item>Automotive Engineering</item>
        <item>Communications and computer networks engineering</item>
        <item>Data science and engineering</item>
        <item>Design sismico</item>
        <item>Economia dell ambiente,della cultura e del territorio</item>
        <item>Geografia e scienze territoriali</item>
        <item>ICT for smart societies</item>
        <item>Ingengeria Aereospaziale</item>
        <item>Ingegneria Biomedica</item>
        <item>Ingegneria Chimica e dei processi sostenibili</item>
        <item>Ingegneria Civile</item>
        <item>Ingegneria dei Materiali</item>
        <item>Ingegneria del Cinema e dei mezzi di comunicazione</item>
        <item>Ingegneria della produzione industriale e dell innovazione tecnologica</item>
        <item>Ingegneria Edile</item>
        <item>Ingegneria Elettronica</item>
        <item>Building Engineering</item>
        <item>Ingegneria Elettrica</item>
        <item>Ingegneria Energetica e Nucleare</item>
        <item>Ingegneria Fisica</item>
        <item>Ingegneria Gestionale </item>
        <item>Engineering and Management</item>
        <item>Ingegneria Informatica</item>
        <item>Computer Engineering</item>
        <item>Ingegneria Meccanica</item>
        <item>Mechanica Engineering</item>
        <item>Ingegneria per l ambiente e il territorio</item>
        <item>Ingegneria Matematica</item>
        <item>Pianificazione territoriale, urbanistica e paesaggistico-ambientale</item>
        <item>Tecnologie per l industria manifatturiera</item>
        <item>Mechatronic engineering</item>
        <item>Petroleum and minig engineering</item>
        <item>Physics of complex system</item>
        <item>Fisica dei sistemi complessi</item>

    </string-array>
</resources>