<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ModificaProfilo">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/etichetta9" />

    <Button
        android:id="@+id/infopersonali"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:text="@string/Bottone3" />

    <Button
        android:id="@+id/notifiche"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:text="@string/Bottone4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/etichetta10" />

    <Button
        android:id="@+id/annuncio"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:text="@string/Bottone5" />

    <Button
        android:id="@+id/esperienza"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:text="@string/Bottone6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/etichetta11" />

    <Button
        android:id="@+id/assistenza"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:text="@string/Bottone7" />

</LinearLayout>