<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo_activity"
    android:orientation="vertical"
    tools:context=".profilo.ProfiloProprietario">


    <de.hdodenhof.circleimageview.CircleImageView

        android:id="@+id/immagineProfiloProp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="start"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/com_facebook_profile_picture_blank_portrait"
        app:civ_border_color="@color/rosso_scuro"
        app:civ_border_width="2dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cambiaImmagineProp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cambiaImmagine" />

        <Button
            android:id="@+id/aggiungiCasa"
            android:layout_width="222dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="aggiungiNuovaCasa"
            android:text="@string/aggiungiCasa" />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_nomeP"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:text="@string/nome" />

                <TextView
                    android:id="@+id/text_cognomeP"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:text="@string/cognome" />

                <TextView
                    android:id="@+id/text_emailP"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/email" />
            </LinearLayout>

            <TextView
                android:id="@+id/text_view_testo1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/caseProprietario"
                android:textColor="@color/black" />

            <ListView
                android:id="@+id/lv_case_prop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></ListView>

            <TextView
                android:id="@+id/tv_recensioni"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/recensioniProprietario"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/b_nuovaRecensioneProp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button" />

            <ListView
                android:id="@+id/listView_recensioni_proprietario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></ListView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>