<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo_activity"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".registrazione.InserimentoDatiCasa">

    <EditText
        android:id="@+id/et_nomeCasa"
        android:layout_width="367dp"
        android:layout_height="60dp"
        android:layout_gravity="start"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/background_sinistra"
        android:gravity="center|start"
        android:hint="@string/nomeCasa"
        android:inputType="text"
        android:padding="5dp"
        android:textColorHint="@color/rosso_scuro"
        android:textSize="14sp"
        android:translationY="-10dp"
        android:autofillHints="" />

    <TextView
        android:layout_width="367dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:gravity="bottom|center|end"
        android:padding="5dp"
        android:text="@string/posizione"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_viaCasa"
        android:layout_width="367dp"
        android:layout_height="60dp"
        android:layout_gravity="end"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:autofillHints=""
        android:background="@drawable/background_destra"
        android:drawableStart="@drawable/ic_location"
        android:drawableLeft="@drawable/ic_location"
        android:drawablePadding="16dp"
        android:hint="@string/indirizzo"
        android:inputType="textPostalAddress"
        android:padding="20dp"
        android:textColorHint="@color/ic_launcher_background" />

    <TextView
        android:id="@+id/tv_coordinate_casa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text=""
        android:textColor="@color/rosso_scuro"
        android:textStyle="bold" />

    <TextView
        android:layout_width="367dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:gravity="bottom"
        android:padding="10dp"
        android:text="@string/caratteristiche"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="367dp"
        android:layout_height="60dp"
        android:layout_gravity="start"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/background_sinistra"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/numBagni"
            android:textColor="@color/rosso_scuro"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_numeroBagni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_destra"
            android:hint="@string/numero"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/ic_launcher_background"
            android:textColorHint="@color/ic_launcher_background"
            android:autofillHints="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/numStanze"
            android:textColor="@color/rosso_scuro"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_numeroStanze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/background_destra"
            android:hint="@string/numero"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/ic_launcher_background"
            android:textColorHint="@color/ic_launcher_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/numOspiti"
            android:textColor="@color/rosso_scuro"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_numeroOspiti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_destra"
            android:hint="@string/numero"
            android:inputType="number"
            android:padding="10dp"
            android:textColorHint="@color/ic_launcher_background"
            android:autofillHints="" />

    </LinearLayout>

    <Button
        android:id="@+id/i_d_p_continua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="caricaCasa"
        android:text="@string/conferma"
        android:translationY="30dp" />
</LinearLayout>