<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SelezionePrezzoLocalita">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prezzo" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="min price" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="max price" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/et_zone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zone" />

        <CheckBox
            android:id="@+id/check_zona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Crocetta" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/et_tipologia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipologia" />

        <CheckBox
            android:id="@+id/check_tipologia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Stanza Singola" />

    </LinearLayout>

    <Button
        android:id="@+id/b_selezione_prezzo_localita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="conferma"
        android:text="@string/conferma" />

</LinearLayout>