<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo_activity"
    android:orientation="vertical"
    tools:context=".prenotazione.PrenotazionePaypalActivity">

    <Button
        android:id="@+id/b_exit_pp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="back"
        android:text="@string/indietro" />

    <TextView
        android:id="@+id/et_prenotazione_paypal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/etichettaPaypal"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/et_paypal_importo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/etichettaImportoPaypal"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableRight="@drawable/ic_baseline_euro_24"
        android:drawablePadding="10dp"
        android:hint="0"
        android:inputType="number"
        android:padding="20dp"
        android:textColor="@color/rosso_scuro"
        android:textSize="30dp" />

    <Button
        android:id="@+id/b_paypal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="pagamentoTicket"
        android:text="Paga" />

</LinearLayout>